fix avatar spacing

--- a/skins/base/css/molecules/MessageTile.css
+++ b/skins/base/css/molecules/MessageTile.css
@@ -24,7 +24,7 @@ limitations under the License.
 .mx_MessageTile_avatar {
     padding-left: 12px;
     padding-right: 12px;
-    margin-left: -56px;
+    margin-left: -64px;
     margin-top: -7px;
     float: left;    
 }
