--- a/skins/base/css/organisms/RoomView.css
+++ b/skins/base/css/organisms/RoomView.css
@@ -90,5 +90,5 @@ limitations under the License.
     width: 100%;
     -webkit-flex: 0 0 63px;
     flex: 0 0 63px;
-    margin-left: 3px;
+    margin-right: 2px;
 }
